# Motius

./: .gitignore  README.md  pyproject.toml
assets/brand/: README.md
assets/model_zoo/: gallery_manifest.json
checkpoints/: README.md
checkpoints/body_models/: README.md
checkpoints/characters/: README.md
checkpoints/evaluators/: README.md
checkpoints/fbxsdk/: README.md
checkpoints/models/: README.md
configs/_base_/: default_runtime.py
configs/bailando/: bailando_aistpp.py
configs/edge/: edge_aistpp.py
configs/hymotion_t2m/: train_hymotion_t2m.py
configs/maskcontrol/: maskcontrol_humanml3d.py
configs/motionclr/: motionclr_humanml3d.py
configs/prism/: train_prism.py
configs/tmr/: train_tmr_smpl22.py
docs/: architecture.md  development.md  getting_started.md
docs/evaluation/: artifact_layout.md  babel_sequential.md  physical_metrics.md
docs/evaluator_zoo/: README.md  aistpp_music_to_dance.md  g1_tmr.md  humanml3d_official.md  interclip.md  motion_clip.md  motionstreamer.md  motius_joint_position.md  release_manifest.json
docs/leaderboards/: README.md  case_assets_dataset.md  kinematic_motion_control.md  t2m_humanml3d.md  t2m_unitree_g1.md  text_to_multi_person_interhuman.md
docs/model_zoo/: README.md  ardy.md  bailando.md  condmdi.md  dart.md  edge.md  flowmdm.md  gem_smpl.md  gem_x.md  gvhmr.md  hymotion_t2m.md  hymotion_v2m.md  intergen.md  intermask.md  kimodo.md  maskcontrol.md  mdm.md  mld.md  mogents.md  momask.md  motionbricks.md  motionclr.md  motiongpt.md  motiongpt3.md  motionlcm.md  motionmillion.md  motionstreamer.md  omnicontrol.md  prism.md  prompthmr.md  release_manifest.json  release_policy.md  t2mgpt.md  tm2d.md  tm2t.md  unimumo.md  vermo.md  vimogen.md
docs/motion/: README.md  conversion.md  fbx.md  motionbricks.md  representations.md  retargeting.md
docs/tasks/: README.md  m2t.md  monocular_motion_capture.md  music_to_dance.md  taxonomy.json
docs/training/: prism_tmr_hymotion_t2m.md
hftrainer/: __init__.py  registry.py
hftrainer/datasets/: __init__.py  base_dataset.py
hftrainer/evaluation/: __init__.py
hftrainer/hooks/: __init__.py  checkpoint_hook.py  ema_hook.py  logger_hook.py  lr_scheduler_hook.py
hftrainer/models/: __init__.py  base_model_bundle.py
hftrainer/pipelines/: __init__.py  base_pipeline.py
hftrainer/runner/: __init__.py  accelerate_runner.py  loops.py
hftrainer/trainers/: __init__.py  base_trainer.py
hftrainer/utils/: __init__.py  logger.py
hftrainer/visualization/: __init__.py  file_visualizer.py  tensorboard_visualizer.py
literature-surveys/2024-2026-llm-based-evaluation-metrics-for-open-ended-text-generation-an/: 00_scope.md  01_query_plan.md  coverage_audit.md  papers_merged.csv  reading_matrix.csv  screening.csv  snowball_log.csv  source_ledger.csv  survey_state.json  synthesis_outline.md
motius/: __init__.py  registry.py
motius/datasets/: __init__.py  aistpp_music_to_dance.py  base_dataset.py  text_motion.py
motius/evaluation/: __init__.py  artifacts.py  babel.py  base_evaluator.py  dance_to_music.py  m2t.py  monocular_capture.py  monocular_ground_truth.py  music_to_dance.py  sequential.py
motius/hooks/: __init__.py  checkpoint_hook.py  ema_hook.py  logger_hook.py  lr_scheduler_hook.py
motius/models/: __init__.py  base_model_bundle.py  peft_utils.py  utils.py
tests/: test_add_smpl_gallery_method.py  test_ardy.py  test_babel135.py  test_babel_action_groups.py  test_babel_sequential_protocol.py  test_bailando.py  test_condmdi.py  test_core_import.py  test_dance_to_music.py  test_edge.py  test_eval_t2m_joint_evaluator.py  test_evaluation_artifacts.py  test_export_smpl_web_model.py  test_fbx_export.py  test_flowmdm_babel.py  test_gem_monocular.py  test_gvhmr.py  test_humanml3d_evaluator.py  test_hymotion_v2m_monocular.py  test_hymotion_v2m_pipeline.py  test_interaction_models.py  test_interhuman262.py  test_m2t.py  test_maskcontrol_pipeline.py  test_materialize_motion272_joints.py  test_model_zoo_taxonomy.py  test_monocular_capture.py  test_monocular_capture_leaderboard.py  test_monocular_ground_truth.py  test_monocular_model_cards.py  test_monocular_shard_plan.py  test_motion_representations.py  test_motionbricks.py  test_motionclr.py  test_motionstreamer_evaluator.py  test_motionstreamer_sequential.py  test_omnicontrol.py  test_physical_metrics.py  test_prism.py  test_prompthmr.py  (+11 more)
tools/: add_smpl_gallery_method.py  audit_aistpp_beat_alignment.py  audit_model_zoo_release.py  audit_runtime_boundaries.py  audit_training_release.py  babel_sequential_viewer.html  bootstrap_run_3dpw_hymotion_v2m_taiji.sh  bootstrap_run_3dpw_monocular_taiji.sh  build_3dpw_monocular_shard_plan.py  build_aistpp_gallery_audio.py  build_aistpp_gallery_manifest.py  build_aistpp_reference_features.py  build_aistpp_utmr_reference_embeddings.py  build_babel_sequential_manifest.py  build_babel_sequential_viewer.py  build_babel_smpl_gallery.py  build_dance_to_music_leaderboard.py  build_fbx_character_demo.py  build_interhuman_representation_demo.py  build_m2t_audit_viewer.py  build_m2t_case_explorer.py  build_m2t_protocol_manifest.py  build_m2t_smpl_gallery.py  build_mixamo_characters.py  build_monocular_capture_gallery.py  build_monocular_capture_manifests.py  build_motion_case_explorer.py  build_representation_demo.py  build_smpl_motion_gallery.py  build_temporal_case_explorer.py  calibrate_aistpp_smpl24_skeleton.py  capture_threejs_demo_gif.py  compact_smpl_gallery_manifest.py  convert_bailando_checkpoint.py  convert_edge_checkpoint.py  convert_gvhmr_results.py  convert_hml263_predictions.py  convert_maskcontrol_checkpoint.py  convert_motion.py  convert_motion135_to_motion272_dir.py  (+105 more)
(+966 files in other folders)
