[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "motius"
version = "0.1.0"
description = "A reproducible framework for human motion models"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate>=0.20",
    "datasets>=2.0",
    "diffusers>=0.20",
    "huggingface_hub>=0.20",
    "mmengine>=0.7",
    "peft>=0.5",
    "safetensors>=0.3",
    "scipy>=1.9",
    "torch>=2.0",
    "transformers>=4.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]
vimogen = [
    "ftfy>=6.1",
    "regex>=2023.0",
    "sentencepiece>=0.1",
]
retarget = [
    "smplx>=0.1",
]
condmdi = [
    "einops>=0.6",
    "ftfy>=6.1",
    "regex>=2023.0",
    "tqdm>=4.65",
    "clip @ git+https://github.com/openai/CLIP.git",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["motius*"]
namespaces = false

[tool.setuptools.package-data]
"motius.motion" = [
    "assets/*.npy",
    "retarget/_gmr/LICENSE",
    "retarget/_gmr/assets/unitree_g1/*.xml",
    "retarget/_gmr/ik_configs/*.json",
]
"motius.models.kimodo" = [
    "network/assets/skeletons/g1skel34/meshes/g1/*.STL",
]
"motius.models.tmr" = ["LICENSE"]
"motius.models.condmdi" = ["LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "smoke: startup smoke tests for training and inference entry points",
    "gpu: tests that require CUDA-capable hardware and local pretrained checkpoints",
]
