[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "motius"
version = "0.1.0"
description = "A reproducible framework for human motion models"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate>=0.20",
    "datasets>=2.0",
    "diffusers>=0.20",
    "huggingface_hub>=0.20",
    "mmengine>=0.7",
    "peft>=0.5",
    "safetensors>=0.3",
    "scipy>=1.9",
    "torch>=2.0",
    "transformers>=4.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]
prism = [
    "einops>=0.6",
    "sentencepiece>=0.1",
]
prism = [
    "einops>=0.6",
    "sentencepiece>=0.1",
]
vimogen = [
    "ftfy>=6.1",
    "regex>=2023.0",
    "sentencepiece>=0.1",
]
retarget = [
    "smplx>=0.1",
]
condmdi = [
    "einops>=0.6",
    "ftfy>=6.1",
    "regex>=2023.0",
    "tqdm>=4.65",
    "clip @ git+https://github.com/openai/CLIP.git",
]
intergen = [
    "clip @ git+https://github.com/openai/CLIP.git",
    "yacs>=0.1.8",
]
intermask = [
    "clip @ git+https://github.com/openai/CLIP.git",
    "einops>=0.6",
    "positional-encodings>=6.0",
    "torch-geometric>=2.5",
    "tqdm>=4.65",
]
motionclr = [
    "clip @ git+https://github.com/openai/CLIP.git",
]
flowmdm = [
    "clip @ git+https://github.com/openai/CLIP.git",
    "einops>=0.6",
]
ardy = [
    "einops>=0.7",
    "gradio-client>=1.0",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "pydantic>=2.0",
    "tqdm>=4.65",
    "vector-quantize-pytorch>=1.25,<1.26",
]
ardy-text = [
    "huggingface_hub>=1.0; python_version >= '3.10'",
    "peft>=0.19; python_version >= '3.10'",
    "transformers==5.8.1; python_version >= '3.10'",
]
motionbricks = [
    "adam-atan2-pytorch>=0.1",
    "colorlog>=6.0",
    "hydra-core>=1.3",
    "matplotlib>=3.5",
    "mujoco>=3.0",
    "omegaconf>=2.3",
    "pynput>=1.7",
    "pytorch-lightning>=2.0",
    "vector-quantize-pytorch>=1.25",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["motius*"]
namespaces = false

[tool.setuptools.package-data]
"motius.motion" = [
    "assets/*.npy",
    "retarget/_gmr/LICENSE",
    "retarget/_gmr/assets/unitree_g1/*.xml",
    "retarget/_gmr/ik_configs/*.json",
]
"motius.motion.fbx" = [
    "characters/*.fbx",
    "characters/*.json",
    "characters/*.md",
]
"motius.models.kimodo" = [
    "network/assets/skeletons/g1skel34/meshes/g1/*.STL",
]
"motius.models.tmr" = ["LICENSE"]
"motius.models.condmdi" = ["LICENSE"]
"motius.models.intergen" = ["NOTICE", "network/configs/*.yaml"]
"motius.models.intermask" = ["LICENSE"]
"motius.models.motionclr" = ["LICENSE", "ATTRIBUTIONS.md"]
"motius.models.ardy" = [
    "LICENSE",
    "ATTRIBUTIONS.md",
    "network/assets/skeletons/cskel27/*.p",
    "network/assets/skeletons/cskel27/*.npz",
    "network/assets/skeletons/g1skel34/*.p",
    "network/assets/skeletons/g1skel34/xml/*.xml",
]
"motius.models.motionbricks" = [
    "ATTRIBUTIONS.md",
    "network/assets/skeletons/g1/*.xml",
    "network/assets/skeletons/g1/meshes/*.STL",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "smoke: startup smoke tests for training and inference entry points",
    "gpu: tests that require CUDA-capable hardware and local pretrained checkpoints",
]
